# RAG-With-Complex-Documents

./: .env.template  .gitignore  .pre-commit-hooks.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: env.py  main.py
src/config/: llama_index_config.py  vector_store_index_config.py
src/routers/: base_router.py  chat_router.py  ingest_router.py
src/services/: document_service.py
