[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "UP", # pyupgrade
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "I", # isort
    "N", # pep8-naming
]
ignore = ["ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN401"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]